--- a/main/resources/main.css
+++ b/main/resources/main.css
@@ -51,18 +51,6 @@
     -fx-border-color: -fx-secondary;
 }
 
-.tab:focused
-{
-    -fx-focus-color : transparent;
-}
-
-.tab-pane *.tab-header-background
-{
-    -fx-background-color: transparent;
-}
-
-.tab-pane:top *.tab-header-area
-{
-    -fx-background-insets: 0, 0 0 10;
-    -fx-padding: 0.0em 0.0em 0.0em 0.0em;
+.tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
+    -fx-border-color: transparent;
 }
